Mentés gomb módosítása

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -298,4 +298,5 @@
     <string name="osModulPy">Az os modul kényelmes módot biztosít a fájlok kezelésére, mint például fájlok létrehozása, törlése, átnevezése stb.</string>
     <string name="finalQuizPy1">Összegző kvíz</string>
     <string name="finalPy">Python összegzés</string>
+    <string name="save1">Mentés</string>
 </resources>
